completed blog page

--- a/blog.html
+++ b/blog.html
@@ -6,15 +6,15 @@
     <title>BlogPost</title>
     <link rel="stylesheet" href="./assets/blog.css">
 </head>
-<body>
+<body class="container light">
     <header>
         <div class="title">
         <h2>My First Blog</h2>
     </div>
         
     <div >
-        <button class="buttons">Back</button>
-        <button class="buttons">☀️</button>
+        <button class="buttons" id="back">Back</button>
+        <button class="buttons" id="theme">☀️</button>
        </div>
     
     </header>
@@ -36,5 +36,6 @@
             <a href=""><li>Email: arturo@email.com</li></a>
         </ul>
     </footer>
+    <script src="./js/blog.js"></script>
 </body>
 </html>
