--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Blog</title>
     <link rel="stylesheet" href="./assets/styles.css" />
   </head>
-  <body>
+  <body class="container light">
     <div>
       <nav>
         <button id="theme">☀️</button>
