added comments / clean up

--- a/blog.html
+++ b/blog.html
@@ -6,6 +6,7 @@
     <title>BlogPost</title>
     <link rel="stylesheet" href="./assets/blog.css">
 </head>
+<!-- wrapping all content in a container -->
 <body class="container light">
     <header>
         <div class="title">
@@ -19,6 +20,7 @@
     
     </header>
 
+    <!-- created blog posts will be appended here -->
     <div class="containerBlog">
 
 
