--- a/index.html
+++ b/index.html
@@ -6,13 +6,16 @@
     <title>Blog</title>
     <link rel="stylesheet" href="./assets/styles.css" />
   </head>
+  <!-- placing the container here to capture all the content -->
   <body class="container light">
     <div>
       <nav>
+        <!-- button to toggle theme -->
         <button id="theme">☀️</button>
       </nav>
     </div>
 
+    <!-- sectioned off the main content into two columns -->
     <main>
       <div class="left">
         <div id="circle"><span id="blog">My First Blog</span></div>
