made blog page responsive

--- a/blog.html
+++ b/blog.html
@@ -13,7 +13,7 @@
         <h2>My First Blog</h2>
     </div>
         
-    <div >
+    <div class="btnContainer">
         <button class="buttons" id="back">Back</button>
         <button class="buttons" id="theme">☀️</button>
        </div>
